[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/TX Shadow.png" type="Texture" id=1]
[ext_resource path="res://assets/TX Props.png" type="Texture" id=2]
[ext_resource path="res://props/chest/Chest.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 92, 0, 46, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 92, 64, 46, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "opened",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 73, 0, 73, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 73, 64, 73, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "opened",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.5181, 7.63356 )

[sub_resource type="CircleShape2D" id=8]
radius = 28.4592

[node name="Chest" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="ShadowAnimSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.380392 )
position = Vector2( 6, -9 )
frames = SubResource( 3 )
animation = "opened"

[node name="CoverAnimSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -9 )
frames = SubResource( 6 )
animation = "opened"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 12 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
